docs/apache-airflow-providers-google/10.18.0/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_generative_model/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_generative_model`
==========================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_generative_model

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI Generative Model prompting.



Module Contents
---------------

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'example_vertex_ai_generative_model_dag'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: PROMPT
   :value: 'In 10 words or less, why is Apache Airflow amazing?'

   

.. py:data:: LANGUAGE_MODEL
   :value: 'text-bison'

   

.. py:data:: TEXT_EMBEDDING_MODEL
   :value: 'textembedding-gecko'

   

.. py:data:: MULTIMODAL_MODEL
   :value: 'gemini-pro'

   

.. py:data:: MULTIMODAL_VISION_MODEL
   :value: 'gemini-pro-vision'

   

.. py:data:: VISION_PROMPT
   :value: 'In 10 words or less, describe this content.'

   

.. py:data:: MEDIA_GCS_PATH
   :value: 'gs://download.tensorflow.org/example_images/320px-Felis_catus-cat_on_snow.jpg'

   

.. py:data:: MIME_TYPE
   :value: 'image/jpeg'

   

.. py:data:: prompt_language_model_task

   

.. py:data:: test_run

   

